--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -332,4 +332,133 @@ figcaption{
 .sponsors-showcase li .logo-sponsors:active{
     transform: scale(1.175);
     cursor: pointer;
+    
+}
+
+/* -------------------------------------------------------------- */
+/* ---------------------- CONTACT FORM -------------------------- */
+/* -------------------------------------------------------------- */
+
+.contact-section{
+    background-image:linear-gradient(45deg,rgba(2, 33, 64,0.75) 30%,rgba(45, 95, 93,0.65)), url("../image/background5.jpeg");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.infomation{
+    list-style: none;
+    color: white;
+    line-height: 200%;
+    margin-top: 70px;
+    word-spacing: 1px;
+}
+
+.infomation .small-icon{
+    color: rgb(168, 154, 207);
+}
+
+.infomation .small-icon:hover,
+.infomation .small-icon:active{
+    transform: scale(1.5);
+    cursor: pointer;
+    transition: .5s;
+}
+
+.social-icon{
+    margin-top: 50px;
+    list-style: none;
+}
+
+.social-icon li{
+    display: inline-block;
+    font-size: 250%;
+    margin-left: 20px;
+    color: white;
+}
+
+.social-icon li i{
+    transition: all .5s;
+    cursor: pointer;
+}
+
+.social-icon li i:hover,
+.social-icon li i:active{
+    transform: scale(1.5);
+    color: #e67e22;
+    cursor: pointer;
+    transition: all .5s;
+}
+
+/* -------------------------------------------------------------- */
+/* --------------------------- FORM ----------------------------- */
+/* -------------------------------------------------------------- */
+
+form{
+    background-color: rgba(0,0,0,0.4);
+    margin-left: 40%;
+    width: 60%;
+    padding: 30px;
+    margin-bottom: 30px;
+}
+
+form .row{
+    margin-bottom: 20px;
+}
+
+label{
+    font-size: 150%;
+    color: white;
+}
+
+input, textarea{
+    outline: none;
+    padding: 10px;
+    background-color: rgba(48, 47, 47, 0.3);
+    border: 1px solid rgba(70, 68, 68, 0.7);
+    margin-left: 30px;
+    height: 100px;
+    
+}
+
+textarea{
+    resize: none;
+}
+
+input{
+    height: 50px;
+}
+
+input[type=text],textarea,input[type=email]{
+    width: 80%;
+    font-size: 100%;
+    transition: all .3s;
+}
+
+input[type=text]:focus,textarea:focus,input[type=email]:focus{
+    color: white;
+    background-color: rgba(224, 236, 154, 0.8);
+}
+
+form .row:last-child{
+    text-align: center;
+}
+
+input[type=submit]{
+    font-weight: 700;
+    font-size: 100%;
+    border-radius: 5px;
+    width: 60%;
+
+}
+
+/* -------------------------------------------------------------- */
+/* ---------------------- FOOTER SECTION ------------------------ */
+/* -------------------------------------------------------------- */
+
+footer{
+    text-align: center;
+    background-color: #494949;
+    color: white;
+    padding: 20px;
 }
