update file js and css

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,5 +1,180 @@
-@media only screen and (max-width:1000px){
+/* Big tablet to 1200px; */
+@media only screen  and (max-width:1200px){
+    html{
+        font-size: 16px;
+    }
+    .heading-main-box{
+        transform: translate(-35%,-50%);
+    }
+    form{
+        margin-left: 30%;
+    }
+}
+ 
+/* Small tablet to big tablet from 768x to 1023px */
+@media only screen and (max-width:1023px){
+     .logo{
+         width: 300px;
+         margin-left: 40px;
+     }
+     .main-nav{
+        margin-right: 10px;
+        margin-top: 40px;
+     }
+     .main-nav li{
+         margin-right: 15px;
+     }
+     .heading-main-box{
+         transform: translate(-20%,-50%);
+     }
+
+     .product-section .btn{
+         width: 80%;
+         margin-left: 10%;
+     }
+     .product-box{
+         width: 95%;
+     }
+     h3{
+         font-size: 90%;   
+     }
+     .product-box ul li{
+         margin-left: 7.5%;
+     }
+     .product-box .small-icon{
+         margin-right: 7.5px;
+     }
+     .social-icon li{
+         margin-left: 10px;
+     }
+     .infomation i{
+         display: block;
+     }
+     .infomation li{
+         font-size: 14px;
+     }
+}
+ 
+/* Small phones to small tablets */
+@media only screen and (max-width: 767px){
+    .col{
+        width: 100%;
+    }
+    .main-nav{
+        display: none;
+    }
+    .mobile-nav-icon{
+        display: block;
+    }
+    .logo{
+        width: 350px;
+        margin-left: 12.5%;
+    }
     h1{
-        color: red;
+        word-spacing: 2px;
+        font-size: 250%;
+        
+    }
+    .heading-main-box{
+        transform: translate(-17%,-50%);
+    }
+    .heading-main-box .btn{
+        width: 15%;
+    }
+    .about-picture img{
+        width: 70%;
+    }
+    .about-picture{
+        text-align: center;
+    }
+    .about-section .row{
+        font-size: 20px;
+    }
+    .picture-title{
+        font-size: 25px;
+    }
+    .product-section .btn{
+        width: 50%;
+    }
+    .product-box{
+        width: 70%;
+        margin-left: 15%;
+    }
+    .product-box ul li{
+        margin-left: 25%;
+    }
+    .testimonial-section .row .col{
+        margin-bottom: 50px;
+    }
+    figcaption{
+        visibility: hidden;
+    }
+    form{
+        width: 80%;
+        margin-left: 10%;
+    }
+    label{
+        margin-left: 37.5%;
+    }
+    .infomation{
+        margin-top: 20px;
+        text-align: center;     
+    }
+    .infomation li{
+        font-size: 20px;
+    }
+    .social-icon{
+        text-align: center;
+    }
+    .social-icon li{
+        font-size: 60px;
+        margin-bottom:20px;
+    }
+}
+ 
+@media only screen and (max-width: 570px){
+    .mobile-nav-icon{
+        right: 45px;
+    }
+}
+
+/* Small phones from 0 to 480px; */
+@media only screen and (max-width: 480px){
+   html{
+       font-size: 12px;
+    }
+   h1{
+       font-size: 200%;
+    }
+   .heading-main-box{
+       transform: translate(-10%,-50%);
+    }
+   .heading-main-box .btn{
+        display: block;
+        margin-bottom: 20px;
+        margin-left: 2.5%;
+        width: 12.5%;
+    }
+    .logo{
+        width: 250px;
+        margin-top: 10%;
+        margin-left: 20%;
+    }
+    .infomation li{
+        font-size: 16px;
+    }
+    .social-icon li{
+        font-size: 40px;
+    }
+    form{
+        width: 90%;
+        margin-left: 5%;
+    }
+    .mobile-nav-icon{  
+        top: 100px;
+    }
+    .sticky .logo{
+        width: 200px;
+        margin-top: -25px;
     }
 }
