--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -14,6 +14,10 @@ html{
     background-color: #ffffff;
     text-rendering: optimizeLegibility;
 }
+
+body{
+    overflow-x: hidden;
+}
 /* -------------------------------------------------------------- */
 /* -------------------- REUSABLE COMPONENT----------------------- */
 /* -------------------------------------------------------------- */
@@ -109,6 +113,7 @@ header{
     float: left;
     margin-left: 70px;
     margin-top: -50px;
+    margin-bottom: -100px;
 }
 
 .main-nav{
@@ -164,6 +169,41 @@ header{
 {
     background-color: #d35400;
     color: violet;
+}
+
+/* Sticky */
+.sticky{
+    background-color:  rgba(2, 33, 64,.9);
+    position: fixed;
+    z-index: 900;
+    width: 100%;
+    top:0;
+    left: 0;
+    padding-bottom: 10px;
+}
+
+.sticky .logo{
+    width: 250px;
+    margin-top: -40px;
+    margin-bottom: -70px;
+}
+
+.sticky .main-nav{
+    margin-top: 30px;
+}
+
+/* mobile navigation icon */
+.mobile-nav-icon{
+    font-size: 200%;
+    color: #6b95bd;
+    position: absolute;
+    top: 55px;
+    right: 100px;
+    display: none;
+}
+
+.sticky .mobile-nav-icon{
+    top: 30px;
 }
 
 /* -------------------------------------------------------------- */
